@@ -39,6 +39,9 @@ Release 2.1.2 - UNRELEASED
 
     MAPREDUCE-5503. Fixed a test issue in TestMRJobClient. (Jian He via vinodkv)
 
+    MAPREDUCE-5170. Fixed a wrong log message in CombineFileInputFormat class.
+    (Sangjin Lee via vinodkv)
+
 Release 2.1.1-beta - 2013-09-23
 
   INCOMPATIBLE CHANGES
